--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
     "lint": "eslint ./src/**/*.jsx"
   },
   "dependencies": {
-    "axios": "0.18.1",
-    "bootstrap": "4.3.1",
-    "browserslist": "4.6.3",
-    "caniuse-lite": "^1.0.30000975",
+    "axios": "0.19.1",
+    "bootstrap": "4.4.1",
+    "browserslist": "4.8.3",
+    "caniuse-lite": "1.0.30001021",
     "core-js": "^3.0.1",
     "immutable": "3.8.2",
-    "jquery": "3.4.0",
-    "lodash": "4.17.13",
-    "moment": "2.24.0",
-    "popper.js": "1.15.0",
+    "jquery": "3.4.1",
+    "lodash": "4.17.15",
+    "popper.js": "1.16.0",
     "postcss-preset-env": "^6.6.0",
     "prop-types": "15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.8.3",
-    "react-redux": "6.0.1",
-    "react-router-dom": "^4.3.1",
-    "redux": "4.0.1",
+    "react": "^16.12.0",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.12.18",
+    "react-redux": "7.1.3",
+    "react-router-dom": "5.1.2",
+    "redux": "4.0.5",
     "redux-immutable": "4.0.0",
     "redux-promise": "0.6.0"
   },
@@ -55,7 +55,7 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
-    "node-sass": "4.12.0",
+    "node-sass": "4.13.0",
     "path": "0.12.7",
     "postcss-loader": "3.0.0",
     "react-test-renderer": "^16.8.6",
